[build-system]
requires = [
    "setuptools >= 65",
    "wheel >= 0.38",
]
build-backend = "setuptools.build_meta"

[project]
name = "toxicjasmine"
dynamic = ["version"]
authors = [
  { name="me@myself.com" },
]
description = "toxicjasmine: Python runner for jasmine tests"
readme = "README.md"

dependencies = [
    "selenium>=4.21.0",
]

classifiers = [
    'Development Status :: 3 - Alpha',
    'Intended Audience :: Developers',
    'License :: OSI Approved :: GNU General Public License (GPL)',
    'Natural Language :: English',
    'Operating System :: OS Independent',
    'Programming Language :: Python :: 3',
    'Topic :: Software Development :: Libraries :: Python Modules',
    'License :: OSI Approved :: GNU General Public License v3 (GPLv3)'

]


[tool.setuptools.packages.find]
where = ["."]
exclude = ["tests*", "testdata*"]
include = ["toxicjasmine"]

[tool.setuptools.dynamic]
version = {attr = "toxicjasmine.__version__"}

[project.scripts]
toxicjasmine = "toxicjasmine:main"